Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HTML ISSUE BOT 9000</title>
+  <title>HTML ISSUE BOT 9000-Checks for Issues</title>
 
 <body>
-
-  <h1>HTML ISSUE BOT 9000 - Checks for Issues<h1>
 
   <h2>Issue Bot's Daily Diary</h2>
 
