--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML ISSUE BOT 9000-Checks for Issues</title>
-
+</head>
 <body>
 
   <h2>Issue Bot's Daily Diary</h2>
